# kog-strategy

./: .dockerignore  .gitignore  CLAUDE.md  README.md  claude-model-selection-rules.md  data  deploy.json  link_ea.ps1
services/strategy-stats/: .env.example  Caddyfile  Dockerfile.ingest  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
services/strategy-stats/app/: db.py  deps.py  models.py  settings.py
services/strategy-stats/app/ingest/: __init__.py  __main__.py  consumer.py  idempotency.py
services/strategy-stats/app/ingest/streams/: __init__.py  conde_outcomes.py  conde_signals.py  (+4 more)
services/strategy-stats/app/stats/: __init__.py  conde.py  gvfx.py  quality.py  zone.py
services/strategy-stats/app/web/: __init__.py  __main__.py  app.py  since.py
services/strategy-stats/migrations/: env.py
services/strategy-stats/migrations/versions/: 0001_initial.py  0002_account_dimension.py  0003_channel_quality.py
services/strategy-stats/scripts/: db_tunnel.sh
services/strategy-stats/tests/: test_quality.py
services/telegram-listener/: .env.example  .gitignore  HANDOFF.md  README.md  alembic.ini  channels.yaml.example  docker-compose.yml  pyproject.toml
services/telegram-listener/src/tg_listener/: __init__.py  config.py  exceptions.py  logging_setup.py  models.py
services/telegram-listener/tests/: conftest.py  test_cli_channel.py  test_cli_induce.py  test_cli_parser_lifecycle.py  test_cli_parser_stats.py  test_db_schema.py  test_evaluator.py  test_induction_alerts.py  test_minhash.py  test_parser_cache.py  test_regex_engine.py  test_regex_engine_parity.py  test_repos_channels.py  test_repos_parsers.py  test_repos_samples.py  test_sample_collector.py  test_synthesizer.py  test_tier0_metadata.py  test_tier1_heuristic.py  test_tier2_channel_a.py  test_tier2_channel_b.py  test_tier2_dispatcher.py  test_tier2_numbers.py  test_tier3_cache.py  test_tier3_llm.py  test_tier3_providers.py  test_tier4_validator.py
services/telegram-listener/tests/fixtures/: channel_a.py  channel_b.py  messages.py
(+206 files in other folders)
