[project]
name = "strategy-stats"
version = "0.1.0"
description = "Postgres-backed web dashboard for KOG strategy stats (conde / gvfx / zone)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "redis>=5.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py311"
